Update : イベントのビューと非表示の API バックエンドを更新します

--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,9 @@ ul {
 .button-text:hover {
   color: #7c184c;
 }
-
+.error-text {
+  color: #e30d7c;
+}
 .error-block {
   background-color: #f0d9e5;
   margin: 1rem 0;
